hphp/test/slow/record-type-hints/invalid-field-type5.php.expectf
Fatal error: Invalid record field type hint for 'A::$x' in %s/invalid-field-type5.php on line 3
